--- a/aspnetcore/whats-new/2020-09.md
+++ b/aspnetcore/whats-new/2020-09.md
@@ -2,80 +2,80 @@
 title: 'ASP.net Core docs: Neuigkeiten für den 1. September 2020 bis zum 30. September 2020'
 description: Neuerungen in den ASP.net Core docs für den 1. September 2020 bis zum 30. September 2020.
 ms.date: 10/01/2020
-ms.openlocfilehash: 617e5fc6d2e06548498e7e6dfbbaa2efb6326b7c
-ms.sourcegitcommit: c026bf76a0e14a5ee68983519a63574c674e9ff7
+ms.openlocfilehash: e9cd31b3a97ba1a5f28e90d1afbbe6f5ef44be24
+ms.sourcegitcommit: 04ad9cd26fcaa8bd11e261d3661f375f5f343cdc
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 10/01/2020
-ms.locfileid: "91639138"
+ms.lasthandoff: 02/10/2021
+ms.locfileid: "100106621"
 ---
-# <a name="aspnet-core-docs-whats-new-for-september-1-2020---september-30-2020"></a><span data-ttu-id="02b0e-103">ASP.net Core docs: Neuigkeiten für den 1. September 2020 bis zum 30. September 2020</span><span class="sxs-lookup"><span data-stu-id="02b0e-103">ASP.NET Core docs: What's new for September 1, 2020 - September 30, 2020</span></span>
+# <a name="aspnet-core-docs-whats-new-for-september-1-2020---september-30-2020"></a><span data-ttu-id="eec41-103">ASP.net Core docs: Neuigkeiten für den 1. September 2020 bis zum 30. September 2020</span><span class="sxs-lookup"><span data-stu-id="eec41-103">ASP.NET Core docs: What's new for September 1, 2020 - September 30, 2020</span></span>
 
-<span data-ttu-id="02b0e-104">Willkommen bei den Neuerungen in den ASP.net Core docs ab dem 1. September 2020 bis zum 30. September 2020.</span><span class="sxs-lookup"><span data-stu-id="02b0e-104">Welcome to what's new in the ASP.NET Core docs from September 1, 2020 through September 30, 2020.</span></span> <span data-ttu-id="02b0e-105">Nachfolgend sind alle größeren Änderungen aufgelistet, die in diesem Zeitraum an der Dokumentation vorgenommen wurden.</span><span class="sxs-lookup"><span data-stu-id="02b0e-105">This article lists some of the major changes to docs during this period.</span></span>
+<span data-ttu-id="eec41-104">Willkommen bei den Neuerungen in den ASP.net Core docs ab dem 1. September 2020 bis zum 30. September 2020.</span><span class="sxs-lookup"><span data-stu-id="eec41-104">Welcome to what's new in the ASP.NET Core docs from September 1, 2020 through September 30, 2020.</span></span> <span data-ttu-id="eec41-105">Nachfolgend sind alle größeren Änderungen aufgelistet, die in diesem Zeitraum an der Dokumentation vorgenommen wurden.</span><span class="sxs-lookup"><span data-stu-id="eec41-105">This article lists some of the major changes to docs during this period.</span></span>
 
-## <a name="blazor"></a><span data-ttu-id="02b0e-106">Blazor</span><span class="sxs-lookup"><span data-stu-id="02b0e-106">Blazor</span></span>
+## <a name="blazor"></a><span data-ttu-id="eec41-106">Blazor</span><span class="sxs-lookup"><span data-stu-id="eec41-106">Blazor</span></span>
 
-### <a name="new-articles"></a><span data-ttu-id="02b0e-107">Neue Artikel</span><span class="sxs-lookup"><span data-stu-id="02b0e-107">New articles</span></span>
+### <a name="new-articles"></a><span data-ttu-id="eec41-107">Neue Artikel</span><span class="sxs-lookup"><span data-stu-id="eec41-107">New articles</span></span>
 
-- <span data-ttu-id="02b0e-108"><xref:blazor/file-uploads> -Hinzufügen eines Dokuments zum Hochladen von Dateien in blazor mit der inputFile-Komponente</span><span class="sxs-lookup"><span data-stu-id="02b0e-108"><xref:blazor/file-uploads> - Add doc for uploading files in Blazor with the InputFile component</span></span>
-- <span data-ttu-id="02b0e-109"><xref:blazor/components/virtualization> -Doc für komponentenvirtualisierung in blazor hinzufügen</span><span class="sxs-lookup"><span data-stu-id="02b0e-109"><xref:blazor/components/virtualization> - Add doc for component virtualization in Blazor</span></span>
-- <span data-ttu-id="02b0e-110"><xref:blazor/host-and-deploy/configure-trimmer> -Hinzufügen von doc für blazor WASM Intermediate Language Linker-Konfiguration</span><span class="sxs-lookup"><span data-stu-id="02b0e-110"><xref:blazor/host-and-deploy/configure-trimmer> - Add doc for Blazor WASM intermediate language linker configuration</span></span>
+- <span data-ttu-id="eec41-108"><xref:blazor/file-uploads> -Hinzufügen eines Dokuments zum Hochladen von Dateien in blazor mit der inputFile-Komponente</span><span class="sxs-lookup"><span data-stu-id="eec41-108"><xref:blazor/file-uploads> - Add doc for uploading files in Blazor with the InputFile component</span></span>
+- <span data-ttu-id="eec41-109"><xref:blazor/components/virtualization> -Doc für komponentenvirtualisierung in blazor hinzufügen</span><span class="sxs-lookup"><span data-stu-id="eec41-109"><xref:blazor/components/virtualization> - Add doc for component virtualization in Blazor</span></span>
+- <span data-ttu-id="eec41-110"><xref:blazor/host-and-deploy/configure-trimmer> -Hinzufügen von doc für blazor WASM Intermediate Language Linker-Konfiguration</span><span class="sxs-lookup"><span data-stu-id="eec41-110"><xref:blazor/host-and-deploy/configure-trimmer> - Add doc for Blazor WASM intermediate language linker configuration</span></span>
 
-### <a name="updated-articles"></a><span data-ttu-id="02b0e-111">Aktualisierte Artikel</span><span class="sxs-lookup"><span data-stu-id="02b0e-111">Updated articles</span></span>
+### <a name="updated-articles"></a><span data-ttu-id="eec41-111">Aktualisierte Artikel</span><span class="sxs-lookup"><span data-stu-id="eec41-111">Updated articles</span></span>
 
-- <span data-ttu-id="02b0e-112"><xref:blazor/components/data-binding> -Hinzufügen von Abschnitten für blazor mehrere verkettete Bindungs-und Zustands Container</span><span class="sxs-lookup"><span data-stu-id="02b0e-112"><xref:blazor/components/data-binding> - Add sections for Blazor multiple chained bind and state containers</span></span>
-- <span data-ttu-id="02b0e-113"><xref:blazor/security/webassembly/additional-scenarios> -Blazor WASM Sicherheitsupdates</span><span class="sxs-lookup"><span data-stu-id="02b0e-113"><xref:blazor/security/webassembly/additional-scenarios> - Blazor WASM security updates</span></span>
-- <span data-ttu-id="02b0e-114"><xref:blazor/fundamentals/additional-scenarios> -Optimieren des Konfigurations Inhalts des blazor-Hostingmodells</span><span class="sxs-lookup"><span data-stu-id="02b0e-114"><xref:blazor/fundamentals/additional-scenarios> - Enhance Blazor hosting model configuration content</span></span>
+- <span data-ttu-id="eec41-112"><xref:blazor/components/data-binding> -Hinzufügen von Abschnitten für blazor mehrere verkettete Bindungs-und Zustands Container</span><span class="sxs-lookup"><span data-stu-id="eec41-112"><xref:blazor/components/data-binding> - Add sections for Blazor multiple chained bind and state containers</span></span>
+- <span data-ttu-id="eec41-113"><xref:blazor/security/webassembly/additional-scenarios> -Blazor WASM Sicherheitsupdates</span><span class="sxs-lookup"><span data-stu-id="eec41-113"><xref:blazor/security/webassembly/additional-scenarios> - Blazor WASM security updates</span></span>
+- <span data-ttu-id="eec41-114"><xref:blazor/fundamentals/signalr> -Optimieren des Konfigurations Inhalts des blazor-Hostingmodells</span><span class="sxs-lookup"><span data-stu-id="eec41-114"><xref:blazor/fundamentals/signalr> - Enhance Blazor hosting model configuration content</span></span>
 
-## <a name="data-access"></a><span data-ttu-id="02b0e-115">Datenzugriff</span><span class="sxs-lookup"><span data-stu-id="02b0e-115">Data access</span></span>
+## <a name="data-access"></a><span data-ttu-id="eec41-115">Datenzugriff</span><span class="sxs-lookup"><span data-stu-id="eec41-115">Data access</span></span>
 
-### <a name="updated-articles"></a><span data-ttu-id="02b0e-116">Aktualisierte Artikel</span><span class="sxs-lookup"><span data-stu-id="02b0e-116">Updated articles</span></span>
+### <a name="updated-articles"></a><span data-ttu-id="eec41-116">Aktualisierte Artikel</span><span class="sxs-lookup"><span data-stu-id="eec41-116">Updated articles</span></span>
 
-- <span data-ttu-id="02b0e-117"><xref:data/ef-rp/crud> -Aktualisieren von Razor Pages mit EF Core CRUD-Tutorial für ASP.net Core 5,0</span><span class="sxs-lookup"><span data-stu-id="02b0e-117"><xref:data/ef-rp/crud> - Update Razor Pages with EF Core CRUD tutorial for ASP.NET Core 5.0</span></span>
-- <span data-ttu-id="02b0e-118"><xref:data/ef-rp/intro> -Aktualisieren von Razor Pages mit EF Core Tutorial Intro for ASP.net Core 5,0</span><span class="sxs-lookup"><span data-stu-id="02b0e-118"><xref:data/ef-rp/intro> - Update Razor Pages with EF Core tutorial intro for ASP.NET Core 5.0</span></span>
+- <span data-ttu-id="eec41-117"><xref:data/ef-rp/crud> -Aktualisieren von Razor Pages mit EF Core CRUD-Tutorial für ASP.net Core 5,0</span><span class="sxs-lookup"><span data-stu-id="eec41-117"><xref:data/ef-rp/crud> - Update Razor Pages with EF Core CRUD tutorial for ASP.NET Core 5.0</span></span>
+- <span data-ttu-id="eec41-118"><xref:data/ef-rp/intro> -Aktualisieren von Razor Pages mit EF Core Tutorial Intro for ASP.net Core 5,0</span><span class="sxs-lookup"><span data-stu-id="eec41-118"><xref:data/ef-rp/intro> - Update Razor Pages with EF Core tutorial intro for ASP.NET Core 5.0</span></span>
 
-## <a name="fundamentals"></a><span data-ttu-id="02b0e-119">Grundlagen</span><span class="sxs-lookup"><span data-stu-id="02b0e-119">Fundamentals</span></span>
+## <a name="fundamentals"></a><span data-ttu-id="eec41-119">Grundlagen</span><span class="sxs-lookup"><span data-stu-id="eec41-119">Fundamentals</span></span>
 
-### <a name="updated-articles"></a><span data-ttu-id="02b0e-120">Aktualisierte Artikel</span><span class="sxs-lookup"><span data-stu-id="02b0e-120">Updated articles</span></span>
+### <a name="updated-articles"></a><span data-ttu-id="eec41-120">Aktualisierte Artikel</span><span class="sxs-lookup"><span data-stu-id="eec41-120">Updated articles</span></span>
 
-- <span data-ttu-id="02b0e-121"><xref:fundamentals/portable-object-localization> -Doc-Dokument zur Lokalisierung von portablen Objekten für ASP.net Core 3,1</span><span class="sxs-lookup"><span data-stu-id="02b0e-121"><xref:fundamentals/portable-object-localization> - Update portable object localization doc for ASP.NET Core 3.1</span></span>
-- <span data-ttu-id="02b0e-122"><xref:fundamentals/error-handling> -Update zur Fehlerbehandlung für ASP.net Core 5,0</span><span class="sxs-lookup"><span data-stu-id="02b0e-122"><xref:fundamentals/error-handling> - Update error handling doc for ASP.NET Core 5.0</span></span>
+- <span data-ttu-id="eec41-121"><xref:fundamentals/portable-object-localization> -Doc-Dokument zur Lokalisierung von portablen Objekten für ASP.net Core 3,1</span><span class="sxs-lookup"><span data-stu-id="eec41-121"><xref:fundamentals/portable-object-localization> - Update portable object localization doc for ASP.NET Core 3.1</span></span>
+- <span data-ttu-id="eec41-122"><xref:fundamentals/error-handling> -Update zur Fehlerbehandlung für ASP.net Core 5,0</span><span class="sxs-lookup"><span data-stu-id="eec41-122"><xref:fundamentals/error-handling> - Update error handling doc for ASP.NET Core 5.0</span></span>
 
-## <a name="grpc"></a><span data-ttu-id="02b0e-123">gRPC</span><span class="sxs-lookup"><span data-stu-id="02b0e-123">gRPC</span></span>
+## <a name="grpc"></a><span data-ttu-id="eec41-123">gRPC</span><span class="sxs-lookup"><span data-stu-id="eec41-123">gRPC</span></span>
 
-### <a name="new-articles"></a><span data-ttu-id="02b0e-124">Neue Artikel</span><span class="sxs-lookup"><span data-stu-id="02b0e-124">New articles</span></span>
+### <a name="new-articles"></a><span data-ttu-id="eec41-124">Neue Artikel</span><span class="sxs-lookup"><span data-stu-id="eec41-124">New articles</span></span>
 
-- <span data-ttu-id="02b0e-125"><xref:grpc/interprocess> -Dokumentieren der Verwendung von GrpC für die prozessübergreifende Kommunikation</span><span class="sxs-lookup"><span data-stu-id="02b0e-125"><xref:grpc/interprocess> - Document how to use gRPC for inter-process communication</span></span>
-- <span data-ttu-id="02b0e-126"><xref:grpc/test-tools> -Artikel zum Hinzufügen von grpcurl</span><span class="sxs-lookup"><span data-stu-id="02b0e-126"><xref:grpc/test-tools> - Add gRPCurl article</span></span>
-- <span data-ttu-id="02b0e-127"><xref:grpc/deadlines-cancellation> -Hinzufügen von GrpC-Terminen und-Abbruch</span><span class="sxs-lookup"><span data-stu-id="02b0e-127"><xref:grpc/deadlines-cancellation> - Add gRPC deadlines and cancellation</span></span>
-- <span data-ttu-id="02b0e-128"><xref:grpc/wcf> -Hinzufügen eines GrpC-Übersichts Dokuments für WCF-Entwickler</span><span class="sxs-lookup"><span data-stu-id="02b0e-128"><xref:grpc/wcf> - Add gRPC overview doc for WCF developers</span></span>
+- <span data-ttu-id="eec41-125"><xref:grpc/interprocess> -Dokumentieren der Verwendung von GrpC für die prozessübergreifende Kommunikation</span><span class="sxs-lookup"><span data-stu-id="eec41-125"><xref:grpc/interprocess> - Document how to use gRPC for inter-process communication</span></span>
+- <span data-ttu-id="eec41-126"><xref:grpc/test-tools> -Artikel zum Hinzufügen von grpcurl</span><span class="sxs-lookup"><span data-stu-id="eec41-126"><xref:grpc/test-tools> - Add gRPCurl article</span></span>
+- <span data-ttu-id="eec41-127"><xref:grpc/deadlines-cancellation> -Hinzufügen von GrpC-Terminen und-Abbruch</span><span class="sxs-lookup"><span data-stu-id="eec41-127"><xref:grpc/deadlines-cancellation> - Add gRPC deadlines and cancellation</span></span>
+- <span data-ttu-id="eec41-128"><xref:grpc/wcf> -Hinzufügen eines GrpC-Übersichts Dokuments für WCF-Entwickler</span><span class="sxs-lookup"><span data-stu-id="eec41-128"><xref:grpc/wcf> - Add gRPC overview doc for WCF developers</span></span>
 
-## <a name="signalr"></a><span data-ttu-id="02b0e-129">SignalR</span><span class="sxs-lookup"><span data-stu-id="02b0e-129">SignalR</span></span>
+## <a name="signalr"></a><span data-ttu-id="eec41-129">SignalR</span><span class="sxs-lookup"><span data-stu-id="eec41-129">SignalR</span></span>
 
-### <a name="updated-articles"></a><span data-ttu-id="02b0e-130">Aktualisierte Artikel</span><span class="sxs-lookup"><span data-stu-id="02b0e-130">Updated articles</span></span>
+### <a name="updated-articles"></a><span data-ttu-id="eec41-130">Aktualisierte Artikel</span><span class="sxs-lookup"><span data-stu-id="eec41-130">Updated articles</span></span>
 
-- <span data-ttu-id="02b0e-131"><xref:signalr/javascript-client> -Aktualisieren des signalr-JavaScript-Clients auf 3,1</span><span class="sxs-lookup"><span data-stu-id="02b0e-131"><xref:signalr/javascript-client> - Update SignalR JavaScript Client to 3.1</span></span>
+- <span data-ttu-id="eec41-131"><xref:signalr/javascript-client> -Aktualisieren des signalr-JavaScript-Clients auf 3,1</span><span class="sxs-lookup"><span data-stu-id="eec41-131"><xref:signalr/javascript-client> - Update SignalR JavaScript Client to 3.1</span></span>
 
-## <a name="tutorials"></a><span data-ttu-id="02b0e-132">Tutorials</span><span class="sxs-lookup"><span data-stu-id="02b0e-132">Tutorials</span></span>
+## <a name="tutorials"></a><span data-ttu-id="eec41-132">Tutorials</span><span class="sxs-lookup"><span data-stu-id="eec41-132">Tutorials</span></span>
 
-### <a name="updated-articles"></a><span data-ttu-id="02b0e-133">Aktualisierte Artikel</span><span class="sxs-lookup"><span data-stu-id="02b0e-133">Updated articles</span></span>
+### <a name="updated-articles"></a><span data-ttu-id="eec41-133">Aktualisierte Artikel</span><span class="sxs-lookup"><span data-stu-id="eec41-133">Updated articles</span></span>
 
-- <span data-ttu-id="02b0e-134"><xref:tutorials/first-web-api> -Web-API-Tutorial für ASP.net Core 5,0 aktualisieren</span><span class="sxs-lookup"><span data-stu-id="02b0e-134"><xref:tutorials/first-web-api> - Update web API tutorial for ASP.NET Core 5.0</span></span>
+- <span data-ttu-id="eec41-134"><xref:tutorials/first-web-api> -Web-API-Tutorial für ASP.net Core 5,0 aktualisieren</span><span class="sxs-lookup"><span data-stu-id="eec41-134"><xref:tutorials/first-web-api> - Update web API tutorial for ASP.NET Core 5.0</span></span>
 
-## <a name="community-contributors"></a><span data-ttu-id="02b0e-135">Mitwirkende an der Community</span><span class="sxs-lookup"><span data-stu-id="02b0e-135">Community contributors</span></span>
+## <a name="community-contributors"></a><span data-ttu-id="eec41-135">Beitragende aus der Community</span><span class="sxs-lookup"><span data-stu-id="eec41-135">Community contributors</span></span>
 
-<span data-ttu-id="02b0e-136">Die folgenden Personen haben während dieses Zeitraums zu den ASP.net Core docs beigetragen.</span><span class="sxs-lookup"><span data-stu-id="02b0e-136">The following people contributed to the ASP.NET Core docs during this period.</span></span> <span data-ttu-id="02b0e-137">Vielen Dank!</span><span class="sxs-lookup"><span data-stu-id="02b0e-137">Thank you!</span></span> <span data-ttu-id="02b0e-138">Erfahren Sie, wie Sie mitwirken können, indem Sie den Links unter „Beteiligen“ auf der [Landing Page „Neuerungen“](index.yml) folgen.</span><span class="sxs-lookup"><span data-stu-id="02b0e-138">Learn how to contribute by following the links under "Get involved" in the [what's new landing page](index.yml).</span></span>
+<span data-ttu-id="eec41-136">Die folgenden Personen haben während dieses Zeitraums zu den ASP.net Core docs beigetragen.</span><span class="sxs-lookup"><span data-stu-id="eec41-136">The following people contributed to the ASP.NET Core docs during this period.</span></span> <span data-ttu-id="eec41-137">Vielen Dank!</span><span class="sxs-lookup"><span data-stu-id="eec41-137">Thank you!</span></span> <span data-ttu-id="eec41-138">Erfahren Sie, wie Sie mitwirken können, indem Sie den Links unter „Beteiligen“ auf der [Landing Page „Neuerungen“](index.yml) folgen.</span><span class="sxs-lookup"><span data-stu-id="eec41-138">Learn how to contribute by following the links under "Get involved" in the [what's new landing page](index.yml).</span></span>
 
-- <span data-ttu-id="02b0e-139">[serpent5](https://github.com/serpent5) -Kirk Larkin (6)</span><span class="sxs-lookup"><span data-stu-id="02b0e-139">[serpent5](https://github.com/serpent5) - Kirk Larkin (6)</span></span>
-- <span data-ttu-id="02b0e-140">[hischamco](https://github.com/hishamco) -Hisham bin ateya (3)</span><span class="sxs-lookup"><span data-stu-id="02b0e-140">[hishamco](https://github.com/hishamco) - Hisham Bin Ateya (3)</span></span>
-- <span data-ttu-id="02b0e-141">[damienbod](https://github.com/damienbod) -damienbod (2)</span><span class="sxs-lookup"><span data-stu-id="02b0e-141">[damienbod](https://github.com/damienbod) - damienbod (2)</span></span>
-- <span data-ttu-id="02b0e-142">[Peymanmahdavi](https://github.com/PeymanMahdavi) -Peyman Mahdavi (2)</span><span class="sxs-lookup"><span data-stu-id="02b0e-142">[PeymanMahdavi](https://github.com/PeymanMahdavi) - Peyman Mahdavi (2)</span></span>
-- <span data-ttu-id="02b0e-143">[01binary](https://github.com/01binary) -Valeriy novytskyy (1)</span><span class="sxs-lookup"><span data-stu-id="02b0e-143">[01binary](https://github.com/01binary) - Valeriy Novytskyy (1)</span></span>
-- <span data-ttu-id="02b0e-144">[Adamworley](https://github.com/AdamWorley) -Adam Worley (1)</span><span class="sxs-lookup"><span data-stu-id="02b0e-144">[AdamWorley](https://github.com/AdamWorley) - Adam Worley (1)</span></span>
-- <span data-ttu-id="02b0e-145">[cpodesign](https://github.com/cpoDesign) -Pavel (1)</span><span class="sxs-lookup"><span data-stu-id="02b0e-145">[cpoDesign](https://github.com/cpoDesign) - Pavel (1)</span></span>
-- <span data-ttu-id="02b0e-146">[hewby](https://github.com/hewby) -Charlie hewis (1)</span><span class="sxs-lookup"><span data-stu-id="02b0e-146">[hewby](https://github.com/hewby) - Charlie Hewis (1)</span></span>
-- <span data-ttu-id="02b0e-147">[Manne](https://github.com/manne) -Manuel pfemeter (1)</span><span class="sxs-lookup"><span data-stu-id="02b0e-147">[manne](https://github.com/manne) - Manuel Pfemeter (1)</span></span>
-- <span data-ttu-id="02b0e-148">[markmcgookin](https://github.com/markmcgookin) -Mark mcgookin (1)</span><span class="sxs-lookup"><span data-stu-id="02b0e-148">[markmcgookin](https://github.com/markmcgookin) - Mark McGookin (1)</span></span>
-- <span data-ttu-id="02b0e-149">[metapone](https://github.com/metapone) (1)</span><span class="sxs-lookup"><span data-stu-id="02b0e-149">[metapone](https://github.com/metapone) (1)</span></span>
-- <span data-ttu-id="02b0e-150">[mvelosop](https://github.com/mvelosop) -Miguel Veloso (1)</span><span class="sxs-lookup"><span data-stu-id="02b0e-150">[mvelosop](https://github.com/mvelosop) - Miguel Veloso (1)</span></span>
-- <span data-ttu-id="02b0e-151">[Patrick-Steele](https://github.com/patrick-steele) -Patrick Steele (1)</span><span class="sxs-lookup"><span data-stu-id="02b0e-151">[patrick-steele](https://github.com/patrick-steele) - Patrick Steele (1)</span></span>
+- <span data-ttu-id="eec41-139">[serpent5](https://github.com/serpent5) -Kirk Larkin (6)</span><span class="sxs-lookup"><span data-stu-id="eec41-139">[serpent5](https://github.com/serpent5) - Kirk Larkin (6)</span></span>
+- <span data-ttu-id="eec41-140">[hischamco](https://github.com/hishamco) -Hisham bin ateya (3)</span><span class="sxs-lookup"><span data-stu-id="eec41-140">[hishamco](https://github.com/hishamco) - Hisham Bin Ateya (3)</span></span>
+- <span data-ttu-id="eec41-141">[damienbod](https://github.com/damienbod) -damienbod (2)</span><span class="sxs-lookup"><span data-stu-id="eec41-141">[damienbod](https://github.com/damienbod) - damienbod (2)</span></span>
+- <span data-ttu-id="eec41-142">[Peymanmahdavi](https://github.com/PeymanMahdavi) -Peyman Mahdavi (2)</span><span class="sxs-lookup"><span data-stu-id="eec41-142">[PeymanMahdavi](https://github.com/PeymanMahdavi) - Peyman Mahdavi (2)</span></span>
+- <span data-ttu-id="eec41-143">[01binary](https://github.com/01binary) -Valeriy novytskyy (1)</span><span class="sxs-lookup"><span data-stu-id="eec41-143">[01binary](https://github.com/01binary) - Valeriy Novytskyy (1)</span></span>
+- <span data-ttu-id="eec41-144">[Adamworley](https://github.com/AdamWorley) -Adam Worley (1)</span><span class="sxs-lookup"><span data-stu-id="eec41-144">[AdamWorley](https://github.com/AdamWorley) - Adam Worley (1)</span></span>
+- <span data-ttu-id="eec41-145">[cpodesign](https://github.com/cpoDesign) -Pavel (1)</span><span class="sxs-lookup"><span data-stu-id="eec41-145">[cpoDesign](https://github.com/cpoDesign) - Pavel (1)</span></span>
+- <span data-ttu-id="eec41-146">[hewby](https://github.com/hewby) -Charlie hewis (1)</span><span class="sxs-lookup"><span data-stu-id="eec41-146">[hewby](https://github.com/hewby) - Charlie Hewis (1)</span></span>
+- <span data-ttu-id="eec41-147">[Manne](https://github.com/manne) -Manuel pfemeter (1)</span><span class="sxs-lookup"><span data-stu-id="eec41-147">[manne](https://github.com/manne) - Manuel Pfemeter (1)</span></span>
+- <span data-ttu-id="eec41-148">[markmcgookin](https://github.com/markmcgookin) -Mark mcgookin (1)</span><span class="sxs-lookup"><span data-stu-id="eec41-148">[markmcgookin](https://github.com/markmcgookin) - Mark McGookin (1)</span></span>
+- <span data-ttu-id="eec41-149">[metapone](https://github.com/metapone) (1)</span><span class="sxs-lookup"><span data-stu-id="eec41-149">[metapone](https://github.com/metapone) (1)</span></span>
+- <span data-ttu-id="eec41-150">[mvelosop](https://github.com/mvelosop) -Miguel Veloso (1)</span><span class="sxs-lookup"><span data-stu-id="eec41-150">[mvelosop](https://github.com/mvelosop) - Miguel Veloso (1)</span></span>
+- <span data-ttu-id="eec41-151">[Patrick-Steele](https://github.com/patrick-steele) -Patrick Steele (1)</span><span class="sxs-lookup"><span data-stu-id="eec41-151">[patrick-steele](https://github.com/patrick-steele) - Patrick Steele (1)</span></span>
